# src/main/java/com/tdtu/webproject/model/condition/EmployeeCondition.java
@@ -5,10 +5,11 @@ import lombok.Builder;
 import lombok.Data;
 
 import java.math.BigDecimal;
+import java.util.List;
 
 @Data
 @Builder
 @AllArgsConstructor
 public class EmployeeCondition {
-    private BigDecimal EmployeeId;
+    private List<BigDecimal> employeeIds;
 }
